--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -12,7 +12,7 @@ spring:
           uri: https://github.com/fengkidding/config.git
           # github 登录账号
           username: fengkidding
-          password: 123456
+          password: 658asdQW
           # 配置文件分支
           default-label: master
           # 配置文件所在根目录
